Appendix almost, but version to committee two weeks before...

--- a/Acronyms.tex
+++ b/Acronyms.tex
@@ -77,3 +77,7 @@
 \newacronym{matlab}{MATLAB}{Matrix Laboratory}
 
 \newacronym{modtran}{MODTRAN}{MODerate resolution atmospheric TRANsmission}
+
+\newacronym{od}{OD}{optical density}
+
+\newacronym{diw}{DIW}{de-ionized water}
