--- a/javier_bibPhD.bib
+++ b/javier_bibPhD.bib
@@ -2,12 +2,30 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Javier Concha First at 2015-10-28 21:57:09 -0400 
+%% Created for Javier Concha First at 2015-11-03 19:03:10 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@manual{Tyler2013_SPM_protocol,
+	Address = {Rochester, NY},
+	Author = {C. Tyler},
+	Date-Added = {2015-11-04 00:01:46 +0000},
+	Date-Modified = {2015-11-04 00:03:08 +0000},
+	Organization = {Rochester Institute of Technology},
+	Title = {Suspended particulate matter lab protocol},
+	Year = {2013}}
+
+@manual{Tyler2013_chl_protocol,
+	Address = {Rochester, NY},
+	Author = {C. Tyler},
+	Date-Added = {2015-11-03 23:58:19 +0000},
+	Date-Modified = {2015-11-04 00:00:13 +0000},
+	Organization = {Rochester Institute of Technology},
+	Title = {Photosynthetic pigment lab protocol},
+	Year = {2013}}
 
 @techreport{Berk:1989fk,
 	Author = {Berk, Alexander and Bernstein, Lawrence S. and Robertson, David C.},
@@ -1488,7 +1506,7 @@ The most interaction between humankind and water occurs in coastal and inland wa
 	Author = {B. Greg Mitchell and Mati Kahru and John Wieland and Malgorzata Stramska},
 	Booktitle = {Ocean Optics Protocols For Satellite Ocean Color Sensor Validation, Revision 4, Volume IV: Inherent Optical Properties: Instruments, Characterizations, Field Measurements and Data Analysis Protocols},
 	Date-Added = {2013-05-17 00:30:43 +0000},
-	Date-Modified = {2013-05-17 00:44:44 +0000},
+	Date-Modified = {2015-11-03 20:14:10 +0000},
 	Editor = {James L. Mueller and Giulietta S. Fargion and Charles R. McClain},
 	Institution = {Scripps Institution of Oceanography, University of California San Diego, California},
 	Publisher = {Goddard Space Flight Space Center},
