--- a/Appendix.tex
+++ b/Appendix.tex
@@ -364,7 +364,8 @@ Notes:
 \todo{Show comparison of Monroe county to RIT Lab}Methods described by \cite{Lorenzen:1967fk} and \cite{Ritchie:2008eu}.
 % ------------------------------
 \subsubsection{Procedures}
-The procedures are described by \cite{Tyler2013_chl_protocol}
+The procedures are described by \cite{Tyler2013_chl_protocol}.
+
 % ------------------------------
 \subsubsection{Calculations}
 
