--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -1,5 +1,5 @@
 % \documentclass[draft]{book}
-\documentclass[draft]{book}
+\documentclass[]{book}
 
 \usepackage{graphicx}
 
@@ -111,8 +111,8 @@
 
 % Added 11-17-13 ----------------------------------------
 % Select what to do with todonotes: 
-% \usepackage[disable]{todonotes} % notes not showed
-\usepackage[draft]{todonotes}   % notes showed
+\usepackage[disable]{todonotes} % notes not showed
+% \usepackage[draft]{todonotes}   % notes showed
 \setlength{\marginparwidth}{2cm}
 
 \usepackage{tikz} % for flow charts
@@ -273,8 +273,8 @@
 
 \degreetitle{The Use of Landsat 8 for Monitoring \\of Fresh and Coastal Waters}
 \degreeauthor{Javier A. Concha}
-\degreedate{November 18, 2015}
-% \degreedate{\today{}}
+% \degreedate{November 18, 2015}
+\degreedate{\today{}}
 \prevdegreeA{B.S. Electronics Engineering, Universidad de Concepci\'on, Chile, 2008}
 \prevdegreeB{M.S. Imaging Science, Rochester Institute of Technology, NY, USA, 2012}
 \advisor{Dr. John R. Schott}
